--- a/src/layouts/MinimalistLayout.astro
+++ b/src/layouts/MinimalistLayout.astro
@@ -16,3 +16,40 @@ const {title, desc} = Astro.props;
         </div>
 	</body>
 </html>
+
+<style is:global>
+    *,
+    ::before,
+    ::after{
+        box-sizing: border-box;
+    }
+    html{
+        font-family: Menlo, Monaco, Lucida, Console, "Courier New", Courier, monospace;
+        background: #fff;
+        letter-spacing: -0.025rem;
+    }
+    body,
+    figure{
+        margin: 0;
+        padding: 0;
+    }
+    a{
+        text-decoration: none;
+    }
+    ul{
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+    h1,h2,h3,h4,h5,h6{
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+    p{
+        color: #777;
+        font-size: .8rem;
+        line-height: 1.5;
+        margin: 0;
+        text-wrap: pretty;
+    }
+</style>
