--- a/src/pages/minimalist/index.astro
+++ b/src/pages/minimalist/index.astro
@@ -1,5 +1,12 @@
 ---
 import MinimalistLayout from "../../layouts/MinimalistLayout.astro";
+import About from "../../components/About.astro";
+import Education from "../../components/Education.astro";
+import Experience from "../../components/Experience.astro";
+import Hero from "../../components/Hero.astro";
+import Projects from "../../components/Projects.astro";
+import Skills from "../../components/Skills.astro";
+import KeyboardManager from "../../components/KeyboardManager.astro";
 
 const page = {
     title: "Minimalist Portfolio Json",
@@ -10,7 +17,13 @@ const page = {
 <MinimalistLayout title={page.title} desc={page.desc}>
     <div class="row">
         <main>
-            <h1>{page.title}</h1>
+            <Hero />
+            <About />
+            <Experience />
+            <Education />
+            <Projects />
+            <Skills />
         </main>
+        <KeyboardManager />
     </div>
 </MinimalistLayout>
