Add style, url and img file

--- a/src/layouts/MinimalistLayout.astro
+++ b/src/layouts/MinimalistLayout.astro
@@ -52,4 +52,7 @@ const {title, desc} = Astro.props;
         margin: 0;
         text-wrap: pretty;
     }
+    img{
+        width: 300px;
+    }
 </style>
