--- a/src/pages/minimalist/index.astro
+++ b/src/pages/minimalist/index.astro
@@ -1,11 +1,11 @@
 ---
 import MinimalistLayout from "../../layouts/MinimalistLayout.astro";
-import About from "../../components/About.astro";
-import Education from "../../components/Education.astro";
-import Experience from "../../components/Experience.astro";
-import Hero from "../../components/Hero.astro";
-import Projects from "../../components/Projects.astro";
-import Skills from "../../components/Skills.astro";
+import About from "../../components/section/About.astro";
+import Education from "../../components/section/Education.astro";
+import Experience from "../../components/section/Experience.astro";
+import Hero from "../../components/section/Hero.astro";
+import Projects from "../../components/section/Projects.astro";
+import Skills from "../../components/section/Skills.astro";
 import KeyboardManager from "../../components/KeyboardManager.astro";
 
 const page = {
@@ -27,3 +27,11 @@ const page = {
         <KeyboardManager />
     </div>
 </MinimalistLayout>
+
+<style>
+    main{
+        padding: 4rem;
+        margin: auto;
+        width: 100%;
+    }
+</style>
