--- a/src/components/minimalist/Section.astro
+++ b/src/components/minimalist/Section.astro
@@ -6,3 +6,11 @@ const {title} = Astro.props;
     {title && <h2>{title}</h2>}
     <slot />
 </section>
+
+<style>
+    section{}
+    h2{
+        margin-bottom: 0.6rem;
+        font-size: 1.3rem;
+    }
+</style>
