--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -20,57 +20,17 @@ const items = menu;
 <style>
 	.links{
 		display: grid;
-		grid-template-columns: repeat(1, 1fr);
-		grid-gap: 1rem;
+		grid-template-columns: repeat(auto-fit, minmax(10rem,18rem));
+        justify-content: center;
+		grid-gap: 0.5rem;
+        transition: .3s;
 	}
 	strong{
 		font-size: 1.3rem;
 		color: #666;
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 		font-weight: 300;
+        text-wrap: wrap;
+        line-height: 2.5;
 	}
-    /* Small devices (landscape phones, 576px and up) */
-    @media (min-width: 576px) {
-        .links{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 1rem;
-        }
-    }
-
-    /* Medium devices (tablets, 768px and up) */
-    @media (min-width: 768px) {
-        .links{
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            grid-gap: 1rem;
-	    }
-    }
-
-    /* Large devices (desktops, 992px and up) */
-    @media (min-width: 992px) {
-        .links{
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: 1rem;
-	    }
-    }
-
-    /* X-Large devices (large desktops, 1200px and up) */
-    @media (min-width: 1200px) {
-        .links{
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            grid-gap: 1rem;
-	    }
-    }
-
-    /* XX-Large devices (larger desktops, 1400px and up) */
-    @media (min-width: 1400px) {
-        .links{
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
-            grid-gap: 1rem;
-	    }
-    }
 </style>
