--- a/src/pages/mini-cv.astro
+++ b/src/pages/mini-cv.astro
@@ -28,16 +28,17 @@ const page = {
 
 <style>
     .skeleton{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(25rem,55rem));
-        justify-content: center;
-        grid-gap: 1.5rem;
-        transition: .3s;
+        background: white;
+        width: 94%;
+        margin: 1rem auto;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
-    /* Small devices (landscape phones, 576px and up) */
-    @media (min-width: 768px) {
+    @media screen and (min-width: 768px){
         .skeleton{
-            padding-top: 3rem;
+            margin: 3.6rem auto;
+            max-width: 670px;
         }
     }
 </style> 
