--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,5 +9,18 @@ const page = {
 ---
 
 <Layout title={page.title} desc={page.desc}>
-	<Menu />
+	<div class="skeleton">
+		<Menu />
+	</div>
 </Layout>
+
+<style>
+    .skeleton{
+        background: white;
+        width: 80%;
+        margin: 1rem auto;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+</style> 
