--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,4 +16,5 @@ const {title, desc} = Astro.props;
             <slot />
         </div>
 	</body>
+	<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </html>
