--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,23 @@
 ---
-import "../styles/global.css";
-const {title, desc} = Astro.props;
+import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
+import "../styles/global.css"
+const { page } = Astro.props;
 ---
-
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-        <meta name="description" content={desc}>
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<title>{title}</title>
-	</head>
-	<body>
-		<div class="container">
-            <slot />
-        </div>
-	</body>
-	<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content={page.desc}>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>{page.title}</title>
+</head>
+<body>
+    <div class="skeleton">
+        <Header />
+        <slot />
+        <Footer />
+    </div>
+</body>
 </html>
